--- a/todolist/package.json
+++ b/todolist/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w sass/ -o assets/css/ --recursive",
+    "sass": "node-sass -w sass/ -o assets/css/ —recursive",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Elizaveta Titova",
-  "license": "MIT",
-  "dependencies": {
-    "node-sass": "^6.0.1"
-  }
+  "license": "MIT"
+  
 }
